--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,6 +1,6 @@
 .footer {
     background-color: $color-black;
-    padding: 40px 0;
+    padding: 54px 0 55px;
     &__row {
         display: flex;
         flex-wrap: wrap;
