--- a/sass/blocks/_hero.scss
+++ b/sass/blocks/_hero.scss
@@ -21,7 +21,7 @@
         margin-bottom: 34px;
     }
     &__btn {
-        margin-bottom: 46px;
+        margin-bottom: 60px;
         position: relative;
         &::after {
             content: "";
